# rfs

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  rfs.py  rfs_tui.py  tinyhttp.py
tests/: conftest.py  test_rfs_client.py  test_tinyhttp_api.py  test_tinyhttp_upload.py
