[project]
name = "2026-05-13-playwright"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.59.0",
    "requests>=2.31.0",
    "click>=8.1.0",
]

[project.scripts]
rfs = "rfs:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["rfs.py"]
