[project]
name = "rfs"
version = "0.1.0"
description = "Remote File Server - CLI and TUI client for HTTP file transfer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "textual>=1.0.0",
]

[project.scripts]
rfs = "rfs:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["rfs.py", "rfs_tui.py"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
